# zLog

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  cxfreeze_setup.py  pyproject.toml  run.bat  test.bat
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  GUIDE.md  ROADMAP.md
docs/plans/: README.md  TEMPLATE.md  adb-connect-wifi.md  auto-reconnect.md  auto-size-columns.md  autosave-capture.md  backlog.md  bookmark-labels.md  bookmarks.md  case-sensitive-search.md  checkbox-checked-visual.md  clear-device-buffer.md  clear-device-button.md  clear-device-clears-view.md  clear-filters-button.md  clear-filters.md  clear-on-start.md  cli-tail.md  collapse-repeats.md  column-visibility.md  command-palette.md  (+121 more)
tests/: conftest.py  test_adb_clear.py  test_adb_connect.py  test_anchor.py  test_applog.py  test_autosave.py  test_bundle.py  test_cli.py  test_completion.py  test_density.py  test_device_controller.py  test_devices.py  test_diff.py  test_export.py  test_extract.py  test_file_loader.py  test_font_family.py  test_gutter_line_numbers.py  test_heat.py  test_highlight_rules.py  test_highlight_rules_dialog.py  test_histogram.py  test_history.py  test_incidents.py  test_isolate.py  test_jank.py  test_jump_to_same.py  test_log_delegate.py  test_log_model.py  test_main_window_adb.py  test_main_window_presets.py  test_main_window_settings.py  test_main_window_tabs.py  test_package_selector.py  test_packages.py  test_palette.py  test_parser.py  test_perf.py  test_plugins.py  test_presets.py  (+17 more)
(+72 files in other folders)
