[project]
name = "zlog"
version = "0.2.0"
description = "A desktop GUI for viewing Android logcat — inspired by plog."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vu" }]
dependencies = [
    "PySide6>=6.6",
]

[project.scripts]
zlog = "zlog.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zlog"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# QModelIndex() as a default arg is the standard Qt model/view idiom.
"src/zlog/ui/log_model.py" = ["B008"]
